Chore: change button color

--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -550,8 +550,8 @@ body {
       text-transform: uppercase;
       font-size: 14px;
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-      background-color: #36807c;
-      border-color: #36807c;
+      background-color: #008ffd;
+      border-color: #008ffd;
       color: white;
     }
   }
