--- a/src/styles/templates/cart.scss
+++ b/src/styles/templates/cart.scss
@@ -185,8 +185,8 @@
       text-transform: uppercase;
       font-size: 14px;
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-      background-color: #36807c;
-      border-color: #36807c;
+      background-color: #008ffd;
+      border-color: #008ffd;
       color: white;
       display: block;
       padding: 12px 0;
