--- a/src/styles/templates/index.scss
+++ b/src/styles/templates/index.scss
@@ -406,7 +406,7 @@
 
     button[type="submit"] {
       width: 100%;
-      background: #36807c;
+      background: #008ffd;
       color: white;
       border: 0;
       font-size: 14px;
