--- a/src/styles/templates/login.scss
+++ b/src/styles/templates/login.scss
@@ -128,8 +128,8 @@
     }
 
     input[type="submit"] {
-      background: #ff085a;
-      border-color: #ff085a;
+      background: #008ffd;
+      border-color: #008ffd;
       font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
       font-weight: bold;
       letter-spacing: 1.2px;
