--- a/src/styles/templates/product.scss
+++ b/src/styles/templates/product.scss
@@ -75,7 +75,7 @@
         text-align: left;
         margin: 0 auto;
         position: relative;
-        padding: 3px;
+        padding: 0px;
 
         @media screen and (min-width: $tablet) {
           display: inline-block;
@@ -88,7 +88,8 @@
         }
 
         img {
-          width: 37px;
+          width: 30px;
+          height: 30px;
           margin: 0 auto;
         }
 
@@ -99,7 +100,7 @@
           font-size: 10px;
           font-weight: bold;
           font-family: 'neuzeitgroteskblack';
-          margin-top:  12px;
+          margin-top:  9px;
         }
       }
     }
@@ -113,6 +114,8 @@
           text-align: center;
 
           img {
+            width: 36px;
+            height: 36px;
             display: block;
           }
 
