--- a/src/styles/templates/index.scss
+++ b/src/styles/templates/index.scss
@@ -212,7 +212,8 @@
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
       letter-spacing: 1.2;
       font-weight: bold;
-      width: 180px;
+      font-size: 14px;
+      padding: 0 50px;
     }
   }
 }
