--- a/src/sections/compare-banner.liquid
+++ b/src/sections/compare-banner.liquid
@@ -14,6 +14,7 @@
             <a href="{{ block.settings.link }}">
               <h2>{{ block.settings.title }}</h2>
             </a>
+            <p>{{ block.settings.text }}</p>
             {% if block.settings.button_text != blank %}
               <a href="{{ block.settings.link }}" class="button">
                 {{ block.settings.button_text }}
@@ -52,6 +53,11 @@
             "id": "title",
             "label": "Title",
             "default": "Your title"
+          },
+          {
+            "type": "textarea",
+            "id": "text",
+            "label": "Text"
           },
           {
             "type": "text",
