--- a/src/styles/templates/page.compare.scss
+++ b/src/styles/templates/page.compare.scss
@@ -61,6 +61,14 @@
       }
     }
 
+    p {
+      color: #1e1e1e;
+      font-family: "Avenir-Book";
+      font-size: 18px;
+      line-height: normal;
+      margin-bottom: 20px;
+    }
+
     a.button {
       font-size: 14px;
       color: #008ffd;
