Fix: minor style fix

--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html class="no-js supports-no-cookies" lang="{{ shop.locale }}">
 <head>
+  <meta name="p:domain_verify" content="2a5124afd415bf157b94755eb8d06104"/>
+  <meta name="p:domain_verify" content="2a5124afd415bf157b94755eb8d06104"/>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
