--- a/src/styles/sections/footer.scss
+++ b/src/styles/sections/footer.scss
@@ -95,7 +95,7 @@ footer {
       }
 
       .social-icons {
-        display: block;
+        display: inline-block;
         padding-left: 0px;
         width: 200px;
         margin-bottom: 15px;
@@ -118,6 +118,7 @@ footer {
           margin: 0 3px;
           color: black;
           display: inline-block;
+          padding-top: 1px;
 
           &.icon-instagram:before {
             content: "\e90f";;
