Chore: sync changes from marketing agency

--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -10,6 +10,17 @@
   <meta name="robots" content="index,follow">
   <meta name="google-site-verification" content="1GuKV9Ynhy01MON2gGSP-rmAXmClHgt956WgfNd9BEY" />
 
+  <!-- Begin Anti-flicker snippet (recommended) -->
+  <style>.async-hide { opacity: 0 !important} </style>
+  <script>
+    (function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
+    h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
+    (a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;
+    })(window,document.documentElement,'async-hide','dataLayer',4000,
+    {'GTM-NPXJWT9':true});
+  </script>
+  <!-- End Anti-flicker snippet -->
+
   <link rel="canonical" href="{{ canonical_url }}">
   {% if settings.favicon != nil %}
     <link rel="shortcut icon" type="image/x-icon" href="{{ settings.favicon | img_url: '32x32' }}">
@@ -27,14 +38,6 @@
   <!-- Begin Theme Scripts -->
   {% include 'script-tags', layout: 'theme' %}
   <!-- End Theme Scripts -->
-
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-525LHL5');</script>
-  <!-- End Google Tag Manager -->
 
   <script src='//cdn.freshmarketer.com/233649/808396.js' async></script>
 
