--- a/src/templates/gift_card.liquid
+++ b/src/templates/gift_card.liquid
@@ -1,64 +1,137 @@
-{% comment %}
-  QR code is rendered in `#QrCode`
+{% layout none %}
+{% assign formatted_initial_value = gift_card.initial_value | money_without_trailing_zeros: gift_card.currency %}
+{% assign formatted_initial_value_stripped = formatted_initial_value | strip_html %}
+<!doctype html>
+<!--[if IE 8]><html class="template-giftcard no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if IE 9 ]><html class="ie9 template-giftcard no-js"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html class="template-giftcard no-js"> <!--<![endif]-->
+<head>
+  <!-- Basic page needs ================================================== -->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  `gift_card.pass_url` is true if apple wallet is enabled for the shop
-{% endcomment %}
+  <link rel="shortcut icon" type="image/x-icon" href="{{ settings.favicon | img_url: '32x32' }}">
 
-{% layout 'gift_card' %}
-
-<header role="banner">
-    <a href="{{ shop.url }}">
-      {{ shop.name }}
-    </a>
-  <div>{{ shop.url | escape }}</div>
-</header>
-
-<main class="giftcard {% if gift_card.expired or gift_card.enabled != true %} giftcard--disabled{% endif %}">
-
-  <h1>{{ 'gift_cards.issued.subtext' | t }}</h1>
-  {% unless gift_card.enabled %}
-    <span class="giftcard-tag">{{ 'gift_cards.issued.disabled' | t }}</span>
-  {% endunless %}
-
-  {%- assign gift_card_expiry_date = gift_card.expires_on | date: "%d/%m/%y" -%}
-
-  {% if gift_card.expired and gift_card.enabled %}
-    <span class="giftcard-tag">{{ 'gift_cards.issued.expired' | t: expiry: gift_card_expiry_date }}</span>
+  <!-- Custom Fonts -->
+  {% if settings.logo_font contains 'Google' or settings.headline_font contains 'Google' or settings.nav_font contains 'Google' or settings.slideshow_subtitle_font contains 'Google' or settings.regular_font contains 'Google' %}
+      <link href="//fonts.googleapis.com/css?family=.|{% if settings.logo_font contains 'Google' %}{{ settings.logo_font | replace: 'Google_', '' | replace: "'", "" }}:light,normal,bold|{% endif %}{% if settings.headline_font contains 'Google' %}{{ settings.headline_font | replace: 'Google_', '' | replace: "'", "" }}:light,normal,bold|{% endif %}{% if settings.nav_font contains 'Google' %}{{ settings.nav_font | replace: 'Google_', '' | replace: "'", "" }}:light,normal,bold|{% endif %}{% if settings.slideshow_subtitle_font contains 'Google' %}{{ settings.slideshow_subtitle_font | replace: 'Google_', '' | replace: "'", "" }}:light,normal,bold|{% endif %}{% if settings.regular_font contains 'Google' %}{{ settings.regular_font | replace: 'Google_', '' | replace: "'", "" }}:light,normal,bold{% endif %}" rel="stylesheet" type="text/css" />
   {% endif %}
 
-  {% if gift_card.expired != true and gift_card.expires_on and gift_card.enabled %}
-    <span class="giftcard-tag giftcard-tag--active">{{ 'gift_cards.issued.active' | t: expiry: gift_card_expiry_date }}</span>
-  {% endif %}
+  <!-- Title and description ================================================== -->
+  <title>{{ 'gift_cards.issued.title' | t: value: formatted_initial_value_stripped, shop: shop.name }}</title>
+  <meta name="description" content="{{ 'gift_cards.issued.subtext' | t }}">
 
-  <img src="{{ 'gift-card/card.jpg' | shopify_asset_url }}" alt="Gift card illustration">
+  <!-- Helpers ================================================== -->
+  <link rel="canonical" href="{{ canonical_url }}">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="format-detection" content="telephone=no">
 
-  {% assign formatted_initial_value = gift_card.initial_value | money_without_trailing_zeros: gift_card.currency %}
+  {{ 'gift-card.scss.css' | asset_url | stylesheet_tag }}
+  {{ 'modernizr.gift-card.js' | shopify_asset_url | script_tag }}
+  {{ 'vendor/qrcode.js' | shopify_asset_url | script_tag }}
+</head>
+<body>
+  <div class="wrapper">
+    <header class="giftcard-header" role="banner">
+      <div class="h1 header-logo logo" itemscope itemtype="http://schema.org/Organization">
+        <a href="{{ shop.url }}" itemprop="url">{{ shop.name }}</a>
+      </div>
+      <div class="shop-url">{{ shop.url }}</div>
+    </header>
 
-  <h2>{{ 'gift_cards.issued.initial_value' | t: value: formatted_initial_value }}</h2>
+    <main class="giftcard" role="main">
+      <div class="giftcard__border{% if gift_card.expired or gift_card.enabled != true %} disabled{% endif %}">
+        <div class="giftcard__content">
 
-  {% assign formatted_current_balance = gift_card.balance | money %}
+          <div class="giftcard__header">
+            <h2 class="h4 giftcard__title">{{ 'gift_cards.issued.subtext' | t }}</h2>
+            {% unless gift_card.enabled %}
+              <span class="giftcard__tag">{{ 'gift_cards.issued.disabled' | t }}</span>
+            {% endunless %}
+            {% assign gift_card_expiry_date = gift_card.expires_on | date: "%d/%m/%y" %}
+            {% if gift_card.expired and gift_card.enabled %}
+               <span class="giftcard__tag">{{ 'gift_cards.issued.expired' | t: expiry: gift_card_expiry_date }}</span>
+            {% endif %}
+            {% if gift_card.expired != true and gift_card.expires_on and gift_card.enabled %}
+              <span class="giftcard__tag giftcard__tag--active">{{ 'gift_cards.issued.active' | t: expiry: gift_card_expiry_date }}</span>
+            {% endif %}
+          </div>
 
-  {% if gift_card.balance != gift_card.initial_value %}
-    <p>{{ 'gift_cards.issued.remaining_html' | t: balance: formatted_current_balance }}</p>
-  {% endif %}
+          <div class="giftcard__wrap">
+            <img src="{{ 'gift-card/card.jpg' | shopify_asset_url }}" alt="{{ 'gift_cards.issued.subtext' | t }}">
 
-  {%- assign code_size = gift_card.code | format_code | size -%}
-  <span id="GiftCardDigits" class="giftcard__code" data-gift-card-digits>{{ gift_card.code | format_code }}</span>
+            {% assign initial_value_size = formatted_initial_value | size %}
+            <div class="h1 giftcard__amount{% if initial_value_size > 6 %} giftcard__amount--medium{% endif %}">
+              {% if gift_card.balance != gift_card.initial_value %}
+                <span class="tooltip">
+                  <span class="tooltip__label">{{ gift_card.balance | money }} <small>left</small></span>
+                </span>
+              {% endif %}
+              <strong>{{ formatted_initial_value }}</strong>
+            </div>
 
-  <p>{{ 'gift_cards.issued.redeem' | t }}</p>
+            {% assign code_size = gift_card.code | format_code | size %}
+            <div class="giftcard__code{% if code_size <= 25 %} giftcard__code--large{% elsif code_size > 25 and code_size <= 30 %} giftcard__code--medium{% else %} giftcard__code--small{% endif %}" onclick="selectText('GiftCardDigits');">
+              <div class="giftcard__code__inner">
+                <strong class="giftcard__code__text" id="GiftCardDigits">{{ gift_card.code | format_code }}</strong>
+              </div>
+            </div>
+          </div>
 
-  <a href="{{ shop.url }}" class="button" target="_blank">{{ 'gift_cards.issued.shop_link' | t }}</a>
+          <p class="giftcard__instructions">
+            {{ 'gift_cards.issued.redeem' | t }}
+          </p>
 
-  <canvas id="QrCode" class="giftcard-qr" data-identifier="{{ gift_card.qr_identifier }}" data-gift-card-qr></canvas>
+          <div id="QrCode"></div>
+          <script>
+            new QRCode(document.getElementById('QrCode'), {
+              text: "{{ gift_card.qr_identifier }}",
+              width: 120,
+              height: 120
+            });
+          </script>
 
-  {% if gift_card.pass_url %}
-    <a href="{{ gift_card.pass_url }}" class="apple-wallet">
-      <img class="apple-wallet-image" src="{{ 'gift-card/add-to-apple-wallet.svg' | shopify_asset_url }}" width="120" height="40" alt="{{ 'gift_cards.issued.add_to_apple_wallet' | t }}">
-    </a>
-  {% endif %}
+          <div class="giftcard__actions">
+            <a href="{{ shop.url }}" class="action_button" target="_blank">{{ 'gift_cards.issued.shop_link' | t }}</a>
+            <a href="#" class="action-link" onclick="window.print();">
+              <i class="action-link__print"></i>{{ 'gift_cards.issued.print' | t }}
+            </a>
+          </div>
 
-  <button id="PrintGiftCard" class="print-giftcard" data-gift-card-print>
-    {{ 'gift_cards.issued.print' | t }}
-  </button>
+        </div>
+      </div>
+    </main>
 
-</main>
+    <footer class="giftcard__footer" role="contentinfo">
+       {% if gift_card.pass_url %}
+        <a class="add-to-apple-wallet" href="{{ gift_card.pass_url }}">
+          <img src="{{ 'gift-card/add-to-apple-wallet.svg' | shopify_asset_url }}" width="120" height="40" alt="{{ 'gift_cards.issued.add_to_apple_wallet' | t }}">
+        </a>
+      {% endif %}
+    </footer>
+  </div>
+
+  <script type="text/javascript">
+    /*============================================================================
+      Auto-select gift card code on click, based on ID passed to the function
+        - Use a different method depending on IE or others
+    ==============================================================================*/
+    function selectText(element) {
+      var doc = document,
+          text = doc.getElementById(element);
+
+      if (doc.body.createTextRange) { // ms
+        var range = doc.body.createTextRange();
+        range.moveToElementText(text);
+        range.select();
+      } else if (window.getSelection) { // moz, opera, webkit
+        var selection = window.getSelection(),
+            range = doc.createRange();
+        range.selectNodeContents(text);
+        selection.removeAllRanges();
+        selection.addRange(range);
+      }
+    }
+  </script>
+</body>
+</html>
