--- a/src/styles/templates/index.scss
+++ b/src/styles/templates/index.scss
@@ -60,18 +60,15 @@
   .item {
     background-size: 100%;
     width: 100%;
-    height: 420px;
     background-position: center;
     background-repeat: no-repeat;
-    padding: 50px 0px 20px 0px;
     position: relative;
     margin: 0 auto;
     max-width: 420px;
+    min-height: 240px;
 
     @media screen and (min-width: $tablet) {
       max-width: none;
-      padding-top: 70px;
-      height: 570px;
     }
   }
 
@@ -86,15 +83,25 @@
     font-style: normal;
   }
 
-  .foot {
-    width: 100%;
+  .head {
     position: absolute;
-    bottom: 40px;
-    text-align: center;
+    width: 100%;
+    height: 30%;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-    @media screen and (min-width: $tablet) {
-      bottom: 64px;
-    }
+  .foot {
+    position: absolute;
+    width: 100%;
+    height: 30%;
+    bottom: 0;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     a {
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
