Feature: better quantity break and cart

--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -115,8 +115,8 @@
                     {{ 'layout.general.subtotal' | t }}
                   </template>
 
-                  <template #go-to-cart>
-                    {{ 'layout.general.go_to_cart' | t }}
+                  <template #checkout>
+                    {{ 'cart.general.checkout' | t }}
                   </template>
                 </cart-drawer>
               </div>
