Chore: refactor discount and add in scroll to bottom to cart

--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -101,7 +101,7 @@
             </a>
 
             <transition name="fade">
-              <div v-if="isCartDetailVisible" class="cart-detail">
+              <div v-show="isCartDetailVisible" class="cart-detail">
                 <cart-drawer v-click-outside="vco" @hide="hideCartDetail">
                   <template #continue-shopping>
                     {{ 'cart.general.continue_shopping_link_html' | t }}
