--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -15,6 +15,7 @@ $large-phone: '576px';
 @import "sections/header";
 @import "sections/footer";
 
+// Overwrites
 body {
   font-family: 'neuzeit_grotesk_light';
 }
@@ -23,6 +24,7 @@ input {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+// Utility class
 .text-center {
   text-align: center;
 }
@@ -39,6 +41,27 @@ input {
   clear: both;
 }
 
+.icon-minus:before {
+  content: "\e90d";
+}
+
+.icon-plus:before {
+  content: "\e910";
+}
+
+.hidden {
+  display: none;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+[v-cloak] {
+  display: none !important;
+}
+
+// Challenge page overwrites
 .shopify-challenge__container {
   max-width: 500px;
   margin: 0 auto;
@@ -80,22 +103,72 @@ input {
   }
 }
 
-.icon-minus:before {
-  content: "\e90d";
-}
+// Global component style
+.cart-item {
+  font-family: "neuzeit_grotesk_light";
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #cccccc;
 
-.icon-plus:before {
-  content: "\e910";
-}
+  &:last-child {
+    border-bottom: 0px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+  }
 
-.hidden {
-  display: none;
-}
+  a {
+    display: flex;
+    width: 100%;
+  }
 
-input[type=number] {
-  -moz-appearance: textfield;
-}
+  .image {
+    max-width: 100px;
+    min-width: 100px;
+    padding-right: 10px;
+  }
 
-[v-cloak] {
-  display: none !important;
+  .text {
+    font-weight: normal;
+    font-size: 14px;;
+    line-height: 1.6em;
+    color: #333333;
+
+    @media screen and (min-width: $large-phone) {
+      font-size: 16px;
+    }
+
+    .price {
+      color: #333333;
+      font-weight: 700;
+      letter-spacing: 1px;
+
+      .original-amount {
+        font-weight: normal;
+        text-decoration: line-through;
+      }
+    }
+  }
+
+  .quantity {
+    padding-left: 100px;
+    margin-bottom: 10px;
+
+    input {
+      height: 30px;
+      font-size: 15px;
+      width: 40px;
+      text-align: center;
+    }
+
+    a {
+      height: 30px;
+      width: 32px;
+      font-size: 12px;
+      background-color: #f2f2f2;
+      padding: 0px;
+      font-weight: 300;
+    }
+  }
 }
