--- a/src/sections/text-banner.liquid
+++ b/src/sections/text-banner.liquid
@@ -10,7 +10,7 @@
 
     {% if section.settings.primary_cta_text != blank %}
       <p class="primary-cta">
-        <a class="button" href="{{ section.settings.primary_cta_link }}">
+        <a class="button" href="{{ section.settings.primary_cta_link }}" style="{%- if section.settings.primary_cta_bg_color -%}background-color: {{section.settings.primary_cta_bg_color}};border-color: {{section.settings.primary_cta_bg_color}};{%- endif -%}{%- if section.settings.primary_cta_text_color -%}color: {{section.settings.primary_cta_text_color}};{%- endif -%}">
           {{ section.settings.primary_cta_text}}
         </a>
       </p>
@@ -18,7 +18,7 @@
 
     {% if section.settings.enable_secondary_cta %}
       <p class="secondary-cta">
-        <a class="button" href="{{ section.settings.secondary_cta_link }}">
+        <a class="button" href="{{ section.settings.secondary_cta_link }}" style="{%- if section.settings.secondary_cta_bg_color -%}background-color: {{section.settings.secondary_cta_bg_color}};border-color: {{section.settings.secondary_cta_bg_color}};{%- endif -%}{%- if section.settings.secondary_cta_text_color -%}color: {{section.settings.secondary_cta_text_color}};{%- endif -%}">
           {{ section.settings.secondary_cta_text}}
         </a>
       </p>
@@ -51,6 +51,16 @@
         "label": "Primary CTA Link"
       },
       {
+        "type": "color",
+        "id": "primary_cta_text_color",
+        "label": "Primary CTA Text Color"
+      },
+      {
+        "type": "color",
+        "id": "primary_cta_bg_color",
+        "label": "Primary CTA Background Color"
+      },
+      {
         "type": "checkbox",
         "id": "enable_secondary_cta",
         "label": "Enable Secondary CTA"
@@ -64,6 +74,16 @@
         "type": "url",
         "id": "secondary_cta_link",
         "label": "Secondary CTA Link"
+      },
+      {
+        "type": "color",
+        "id": "secondary_cta_text_color",
+        "label": "Secondary CTA Text Color"
+      },
+      {
+        "type": "color",
+        "id": "secondary_cta_bg_color",
+        "label": "Secondary CTA Background Color"
       }
     ],
     "presets": [
