--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -155,13 +155,31 @@ body {
     }
   }
 
+  .navbar-menu {
+    font-family: "neuzeitgroteskblack";
+    font-size: 17px;
+
+    @media screen and (min-width: $tablet) {
+      font-size: 14px;
+    }
+
+    @media screen and (min-width: $desktop) {
+      font-size: 17px;
+    }
+  }
+
   .navbar-left {
-    width: 36%;
+    display: flex;
+    flex: 2;
+    align-items: stretch;
+
+    @media screen and (min-width: $tablet) {
+      justify-content: flex-end;
+    }
   }
 
   .navbar-brand {
     min-height: 40px;
-    width: 28%;
     display: flex;
     justify-content: center;
 
@@ -175,42 +193,18 @@ body {
     }
   }
 
-  .navbar-brand, .navbar-menu {
-    font-family: "neuzeitgroteskblack";
-    font-size: 17px;
-  }
-
   .navbar-burger {
     max-height: 40px;
     margin-left: 0px;
   }
 
-  .navbar-menu {
-    margin-left: 60px;
-  }
-
   .navbar-right {
-    width: 36%;
-    flex-grow: 1;
+    flex: 2;
     display: flex;
-    flex-shrink: 0;
     justify-content: flex-end;
 
-    .navbar-item:hover {
-      border-bottom: 1px solid transparent;
-      color: white;
-    }
-
-    .navbar-item.search {
-      display: none;
-
-      img {
-        padding: 3px;
-      }
-
-      @media screen and (min-width: $tablet) {
-        display: none;
-      }
+    .navbar-menu {
+      justify-content: flex-end;
     }
 
     .navbar-item.mobile-cta {
@@ -233,9 +227,25 @@ body {
       }
     }
 
+    .navbar-item.search {
+      display: none;
+
+      img {
+        padding: 3px;
+      }
+
+      @media screen and (min-width: $tablet) {
+        display: none;
+      }
+    }
+
+    .navbar-item.cart {
+      &:hover {
+        border-bottom: 1px solid white;
+      }
+    }
+
     .navbar-item {
-      font-family: "neuzeit_grotesk_regular";
-      color: white;
       padding-top: 5px;
       padding-bottom: 5px;
 
@@ -245,6 +255,8 @@ body {
       }
 
       .cart-count {
+        font-family: "neuzeit_grotesk_regular";
+        color: white;
         position: absolute;
         bottom: 3px;
         right: 17px;
@@ -288,6 +300,10 @@ body {
   }
 }
 
+.navbar > .mobile-menu {
+  width: 100%;
+}
+
 .navbar > .mega-drop.mobile {
   background-color: white;
   opacity: 0.95;
@@ -303,6 +319,8 @@ body {
 
   .columns {
     padding: 0 10px;
+    flex-wrap: wrap;
+    justify-content: center;
 
     .item {
       display: block;
