Feature: better desktop mega

--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -56,7 +56,7 @@
             </a>
 
             <div class="navbar-menu">
-              <a @mouseenter="showDesktopMega" class="navbar-item" href="{{ link.url }}">
+              <a @mouseenter="showDesktopMega" class="navbar-item" href="javascript:;">
                 {{section.settings.desktop_cta_text}}
                 <span class="icon-down-arrow">
               </a>
