--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -357,11 +357,12 @@ body {
 .navbar > .mega-drop.desktop {
   display: flex;
   justify-content: center;
-  background-color: white;
-  height: 240px;
+  align-items: center;
+  background-color: #F7F7F7;
+  height: 200px;
 
   .item {
-    padding: 15px 40px 30px 40px;
+    padding: 0px 40px;
     text-align: center;
     color: #0080ce;
 
