Chore: add saving text

--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -516,6 +516,13 @@ body {
       }
     }
 
+    .saving {
+      margin-top: -12px;
+      text-align: right;
+      margin-bottom: 12px;
+      color: red;
+    }
+
     .button {
       font-weight: bold;
       letter-spacing: 1.2px;
